Fixes alignment

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -38,6 +38,7 @@ h3 {
 .header {
     width: 90%;
     max-width: 1200px;
+    margin: 0 auto;
     min-height: 50vh;
     text-align: center;
     display: flex;
